Buscar livros ao clicar na tecla 'enter' quando o input estiver em foco

--- a/src/app/views/lista-livros/lista-livros.component.html
+++ b/src/app/views/lista-livros/lista-livros.component.html
@@ -4,6 +4,7 @@
     <input
       type="search"
       [(ngModel)]="textoBusca"
+      (keyup.enter)="buscaLivros()"
     >
     <button (click)="buscaLivros()">
       <img src="assets/imagens/icone-busca.png" alt="Lupa de cor roxa">
