--- a/src/app/componentes/livro/livro.component.html
+++ b/src/app/componentes/livro/livro.component.html
@@ -1,6 +1,6 @@
 <div class="card">
   <img
-    src="{{ livro != undefined ? livro.thumbnail : 'assets/imagens/capa-indisponivel.png'}}"
+    src="{{ livro.thumbnail != undefined ? livro.thumbnail : 'assets/imagens/capa-indisponivel.png'}}"
     alt="Capa do livro">
   <div class="info-card">
     <p class="titulo">{{ livro.title | slice:0:30}}</p>
