--- a/src/app/componentes/livro/livro.component.html
+++ b/src/app/componentes/livro/livro.component.html
@@ -5,7 +5,7 @@
   <div class="info-card">
     <p class="titulo">{{ livro.title | slice:0:30}}</p>
     <p class="informacoes">Autoria:</p>
-    <p class="resultado">{{ livro.authors}}</p>
+    <p class="resultado">{{ livro.authors | slice:0:1}}</p>
     <p class="informacoes">Data de publicação:</p>
     <p class="resultado">{{ livro.publishedDate | date: "dd 'de' MMM 'de' yyyy"}}</p>
     <p class="informacoes">Editora:</p>
