Corrigindo links e texto do cabeçalho e rodapé

--- a/src/app/componentes/rodape/rodape.component.html
+++ b/src/app/componentes/rodape/rodape.component.html
@@ -1,4 +1,5 @@
 <footer>
   <span>&#174;</span>
-  <p>Desenvolvido por Alura</p>
+  <p>Projeto desenvolvido por <strong>Jackson Leste,</strong>
+    Baseado no curso da <a href="https://www.alura.com.br" target="_blank">Alura</a></p>
 </footer>
