--- a/src/app/componentes/cabecalho/cabecalho.component.html
+++ b/src/app/componentes/cabecalho/cabecalho.component.html
@@ -3,7 +3,7 @@
     <img src="assets/imagens/logo.png" alt="Logo da aplicação Buscante">
   </button>
   <div>
-    <a href="https://github.com/nayannelbatista" target="_blank">Sobre</a>
-    <a href="https://www.linkedin.com/in/nayannebatista/" target="_blank">Contato</a>
+    <a href="https://github.com/Jacksonleste" target="_blank">Sobre</a>
+    <a href="https://www.linkedin.com/in/jackson-leste-2765841bb/" target="_blank">Contato</a>
   </div>
 </header>
